tests/compile-fail/Rule_3_1.rs
fn main() {
    /* /* Nested comment */ // Nested comment */
    //~^ ERROR nested comments
}
